# xgb_mono_demo

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  README.md  TODO.md  data_init.py  datasets.md  pyproject.toml  run_all_datasets.py  tune_simple_grid.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
config/: datasets.csv
data_descriptions/: OBJECTIVES.md  ames_housing.md  auto_mpg.md  california_housing.md  concrete_strength.md  energy_efficiency.md  medical_insurance.md
docs/datasets/: auto_mpg.md  california_housing.md
preprocessing/: __init__.py  common.py  preprocess_all.py
results/: overall_summary.csv
results/ames_housing/: grid_results.csv
results/ames_housing/diagnostics/: feature_importances.csv
results/auto_mpg/: grid_results.csv
results/auto_mpg/diagnostics/: feature_importances.csv
results/california_housing/: grid_results.csv
results/california_housing/diagnostics/: feature_importances.csv
results/concrete_strength/: grid_results.csv
results/concrete_strength/diagnostics/: feature_importances.csv
results/medical_insurance/: grid_results.csv
results/medical_insurance/diagnostics/: feature_importances.csv
scripts/: 01_download_data.py  02_preprocess.py  03_run_experiments.py
src/: __init__.py  data_loader.py  grid_search.py  utils.py  visualization.py
src/preprocessing/: __init__.py  common.py  pipelines.py
src/training/: __init__.py  baseline.py  cross_validation.py  progressive.py
